@@ -2392,7 +2392,7 @@ struct Damage  battle_calc_misc_attack(
 	case CR_ACIDDEMONSTRATION:
 		//This equation is not official, but it's the closest to the official one 
 		//that Viccious Pucca and the other folks at the forums could come up with. [Skotlex]
-		damage = int_ * (int)(newt_sqrt(100*status_get_vit(target))) / 3;
+		damage = int_ * (int)(sqrt(100*status_get_vit(target))) / 3;
 		if (tsd) damage/=2;
 		aflag |= (flag&~BF_RANGEMASK)|BF_LONG;
 		break;
